...
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    CustomSearchView(
                        textSearch,
                        errorMessage,
                        Modifier
                            .testTag("searchTextFieldTag")
                            .background(
                                MaterialTheme.colorScheme.secondary.copy(alpha = 0.2f),
                                CircleShape
                            )
                            .weight(2f), onValueChange = { text ->
                            viewModel.setSearchText(text)
                        })

                    Image(
                        modifier = Modifier
                            .testTag("calenderIcon")
                            .clickable {
                                viewModel.setSearchText("")
                                val userJson = Gson().toJson(currentWeather.value)
                                Log.d(TAG, "MainScreen: $userJson")
                                navController?.navigate(
                                    "${Screen.WeekForecastScreen.route}/${userJson}"
...
}

@Composable
fun DateTitle(modifier: Modifier = Modifier, date: String = "") {

    Text(
        modifier = modifier.testTag("Date"),
        text = date,
        fontFamily = FontFamily(Font(R.font.poppins_semibold, FontWeight.SemiBold)),
        color = MaterialTheme.colorScheme.secondary,
        fontSize = 10.ssp
    )
}
...
        Text(
            text = locationText ?: "",
            fontFamily = FontFamily(Font(R.font.poppins_bold, FontWeight.Bold)),
            fontSize = 15.ssp,
            color = MaterialTheme.colorScheme.primary,
            modifier = Modifier
                .testTag("cityName_main")
                .padding(top = 5.sdp)
        )
    }
}

@OptIn(ExperimentalComposeUiApi::class)
...
