<resources>
    <string name="app_name">Weather Analyzer</string>
    <string name="search_city">Search City</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">FEELS LIKE</string>
    <string name="pressure">PRESSURE</string>
    <string name="wind">Wind</string>
    <string name="date_range_icon">Date Range Icon</string>
    <string name="weather_statue_image">weather statue image</string>
    <string name="location_icon">Location Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="next_week">Next Week</string>
    <string name="mbar">mbar</string>
    <string name="km_hr">km/hr</string>
    <string name="location_permission">Location Permission</string>
    <string name="we_need_location_permissions_for_this_application">We need location permissions for this application.</string>
    <string name="next_hours">Next Hours</string>
    <string name="it_is_required_to_run_the_google_map_application_to_find_your_location">It is required to run the Google Map application and click on get location and then wait a few moments to find your location</string>
</resources>